@@ -48,94 +48,6 @@ cob_field_attr cob_alnum_attr = {COB_TYPE_ALPHANUMERIC, 0, 0, 0, NULL};
 cob_field_attr cob_just_attr  = {COB_TYPE_ALPHANUMERIC, 0, 0, COB_FLAG_JUSTIFIED, NULL};
 cob_field_attr cob_all_attr   = {COB_TYPE_ALPHANUMERIC_ALL, 0, 0, 0, NULL};
 
-cob_field_attr cob_uint_attr[] = {
-  {COB_TYPE_NUMERIC_DISPLAY,  0, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  1, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  2, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  3, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  4, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  5, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  6, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  7, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  8, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  9, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 10, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 11, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 12, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 13, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 14, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 15, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 16, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 17, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 18, 0, 0, NULL}
-};
-
-cob_field_attr cob_sint_attr[] = {
-  {COB_TYPE_NUMERIC_DISPLAY,  0, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  1, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  2, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  3, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  4, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  5, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  6, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  7, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  8, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY,  9, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 10, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 11, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 12, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 13, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 14, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 15, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 16, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 17, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_DISPLAY, 18, 0, COB_FLAG_HAVE_SIGN, NULL}
-};
-
-cob_field_attr cob_ubin_attr[] = {
-  {COB_TYPE_NUMERIC_BINARY,  0, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  1, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  2, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  3, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  4, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  5, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  6, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  7, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  8, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  9, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 10, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 11, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 12, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 13, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 14, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 15, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 16, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 17, 0, 0, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 18, 0, 0, NULL}
-};
-
-cob_field_attr cob_sbin_attr[] = {
-  {COB_TYPE_NUMERIC_BINARY,  0, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  1, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  2, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  3, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  4, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  5, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  6, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  7, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  8, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY,  9, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 10, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 11, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 12, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 13, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 14, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 15, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 16, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 17, 0, COB_FLAG_HAVE_SIGN, NULL},
-  {COB_TYPE_NUMERIC_BINARY, 18, 0, COB_FLAG_HAVE_SIGN, NULL}
-};
-
 cob_field cob_zero =  {1, "0",    &cob_all_attr};
 cob_field cob_space = {1, " ",    &cob_all_attr};
 cob_field cob_high =  {1, "\xff", &cob_all_attr};
