@@ -133,10 +133,6 @@ extern int cob_cmp_result;
 extern cob_field_attr cob_group_attr;	/* group item */
 extern cob_field_attr cob_alnum_attr;	/* PIC X(n) */
 extern cob_field_attr cob_just_attr;	/* PIC X(n) JUSTIFIED RIGHT */
-extern cob_field_attr cob_uint_attr[];	/* PIC 9(n) */
-extern cob_field_attr cob_sint_attr[];	/* PIC S9(n) */
-extern cob_field_attr cob_ubin_attr[];	/* PIC 9(n) BINARY */
-extern cob_field_attr cob_sbin_attr[];	/* PIC S9(n) BINARY */
 extern cob_field_attr cob_all_attr;	/* ALL <literal> */
 
 extern cob_field cob_zero;		/* ZERO */
