@@ -1,3 +1,9 @@
+2003-04-26  Keisuke Nishida  <knishida@netlab.jp>
+
+	* common.h, common.c (cob_uint_attr, cob_sint_attr): Removed.
+	(cob_ubin_attr, cob_sbin_attr): Removed.
+	* move.c: Do not use them.
+
 2003-04-03  Keisuke Nishida  <knishida@netlab.jp>
 
 	* move.c (cob_get_int): Renamed from cob_to_int.
